fix: carrinho, pagamento, email template, CORS e novos endpoints